# avx2_mathfun

./: .gitignore  CMakeLists.txt  README.md  avx2_mathfun.cpp  avx2_mathfun.h  avx2_mathfun.pc.in  avx_mathfun.h
